--- a/app.json
+++ b/app.json
@@ -3,8 +3,6 @@
     "name": "app-sound-player",
     "slug": "app-sound-player",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"]
   }
 }
