--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0"
   },
@@ -25,6 +27,7 @@
     "@types/react-native": "^0.71.5",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
