--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,16 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "module": "es6"
+    "module": "es6",
+    "baseUrl": "./src",
+    "skipLibCheck": true,
+    "paths": {
+      "@components/*": ["./components/*"],
+      "@screens/*": ["./screens/*"],
+      "@assets/*": ["./assets/*"],
+      "@resources/*": ["./resources/*"],
+      "@routes/*": ["./routes/*"],
+      "@store/*": ["./store/*"]
+    }
   }
 }
