--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.10",
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.1",
@@ -20,6 +23,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
