--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "@assets/*": ["./assets/*"],
       "@resources/*": ["./resources/*"],
       "@routes/*": ["./routes/*"],
-      "@store/*": ["./store/*"]
+      "@store/*": ["./store/*"],
+      "@services/*": ["./services/*"]
     }
   }
 }
