--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.20.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
