--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -18,7 +21,7 @@
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.20.0",
+    "formik": "^2.2.9",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
@@ -29,6 +32,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-track-player": "^3.2.0",
+    "yup": "^1.1.1",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
