--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,12 @@ android {
         }
     }
     signingConfigs {
+        release {
+            storeFile file('your_key_name.keystore')
+            storePassword 'negro241102'
+            keyAlias 'your_key_alias'
+            keyPassword 'negro241102'
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -146,7 +152,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
