--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-track-player": "^3.2.0",
+    "react-native-uuid": "^2.0.1",
     "yup": "^1.1.1",
     "zustand": "^4.3.7"
   },
